calculator and api and parenttoChildcomponent

--- a/force-app/main/default/lwc/childComponent/childComponent.html
+++ b/force-app/main/default/lwc/childComponent/childComponent.html
@@ -7,7 +7,7 @@
     <lightning-formatted-text value={displayGreeting}>
     </lightning-formatted-text>
 <div></div>
-    <lightning-formatted-text value={user.firstname}>
+    <lightning-formatted-text value={displayuser}>
     </lightning-formatted-text>
 <div></div>
     Is Employed :{isEmployed}
