--- a/force-app/main/default/lwc/converToUpperCase/converToUpperCase.html
+++ b/force-app/main/default/lwc/converToUpperCase/converToUpperCase.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card title="Convert to UpperCase">
+    <lightning-card title="Convert to UpperCase" icon-name="custom:custom14">
         <div class="slds-p-around_medium">
             <lightning-input label="First Name" value={firstName} onchange={handleFirstNameChange}></lightning-input>
             <lightning-input label="Last Name" value={lastName} onchange={handleLastNameChange}></lightning-input>
