--- a/force-app/main/default/lwc/toDoApplication/toDoApplication.html
+++ b/force-app/main/default/lwc/toDoApplication/toDoApplication.html
@@ -37,7 +37,7 @@
 
             <lightning-button 
             label="Add a New Task" 
-            variant="success"
+            variant="brand"
             onclick={addTaskHandler}
             class="slds-var-p-around_small">
             </lightning-button>
