--- a/force-app/main/default/lwc/customLookupMiniprjctthree/customLookupMiniprjctthree.html
+++ b/force-app/main/default/lwc/customLookupMiniprjctthree/customLookupMiniprjctthree.html
@@ -48,7 +48,8 @@
                 </template>
                 <template lwc:else>
               <div class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right" role="none">
-                <input type="text" class="slds-input slds-combobox__input slds-has-focus" id="combobox-id-3" aria-activedescendant="option1" aria-autocomplete="list" aria-controls="listbox-id-3" aria-expanded="true" aria-haspopup="listbox" role="combobox" placeholder="Search.." onkeyup={changeHandler}/>
+                <input type="text" class="slds-input slds-combobox__input slds-has-focus" id="combobox-id-3" aria-activedescendant="option1" aria-autocomplete="list" aria-controls="listbox-id-3" aria-expanded="true" aria-haspopup="listbox" 
+                role="combobox" placeholder="Search..." onkeyup={changeHandler}/>
 
 <span class="slds-icon_container slds-icon-utility-search slds-input_icon slds-input_icon_right">
                     <lightning-icon 
