--- a/force-app/main/default/lwc/parenrCustomEventDemo/parenrCustomEventDemo.html
+++ b/force-app/main/default/lwc/parenrCustomEventDemo/parenrCustomEventDemo.html
@@ -2,7 +2,8 @@
     <lightning-card title="Custom Event Demo">
         <template if:true={displayMessage}>
             <div class="slds-var-p-around_small">
-                <p>I am learning LWC from Tech Journey With Ankit</p>
+ <p>I am 
+learning LWC from Tech Journey With Ankit</p>
             </div>
         </template>
         <div class="slds-var-p-around_small">
