lds and create update delete wire adapters

--- a/force-app/main/default/lwc/movieSearch/movieSearch.html
+++ b/force-app/main/default/lwc/movieSearch/movieSearch.html
@@ -16,7 +16,7 @@
 
 <lightning-layout-item
 padding="around_small"
-size="7">
+size="6">
 <lightning-input
 name="search"
 label="Enter Search Item"
@@ -48,12 +48,27 @@ size="3">
 </lightning-layout-item>
 </lightning-layout>
 </div>
+<!--Display-->
+<template lwc:if={displaySearchResult}>
+<div class="slds-var-m-around_top_large slds-scrollable_y displaystyle slds-box">
+<lightning-layout
+   horizontal-align="center"
+  multiple-rows="true">
+<template for:each={searchResult} for:item="searchItem">
+<lightning-layout-item
+  size="3"
+ padding="around_small"
+ key={searchItem.imdbID}>
 
+<c-movie-tile movie={searchItem} onselectedmovie={movieSelectedHandler} selected-movie-id={selectedMovie}></c-movie-tile>
+</lightning-layout-item>
 
-<div>
+</template>
 
+</lightning-layout>
 
 
 </div>
+</template>
 <!--Display Section-->
 </template>
