--- a/force-app/main/default/lwc/movieTile/movieTile.html
+++ b/force-app/main/default/lwc/movieTile/movieTile.html
@@ -1,5 +1,5 @@
 <template>
-    <div class={tileSelected} onclick={clickHandler}>
+    <div class={tileselected} onclick={clickHandler}>
 <div class="innertile">
     <img src={movie.Poster}/>
     <div class="lower-third">
