commit Imperative update Operation

--- a/force-app/main/default/lwc/imperativeApexDemoUpdateOperation/imperativeApexDemoUpdateOperation.html
+++ b/force-app/main/default/lwc/imperativeApexDemoUpdateOperation/imperativeApexDemoUpdateOperation.html
@@ -1,6 +1,6 @@
 <template>
-    <lightning-card title="Update Operation using Imperative Apex" icon-name="custom:custom14">
-    
+    <lightning-card title="Update Operation using Imperative Apex"
+     icon-name="custom:custom14">
     <div class="slds-var-p-around_small">
 <lightning-input
 read-only="true"
