--- a/force-app/main/default/lwc/staticResourceDemo/staticResourceDemo.html
+++ b/force-app/main/default/lwc/staticResourceDemo/staticResourceDemo.html
@@ -1,6 +1,11 @@
 <template>
-
-    <lightning-card title="Animate Css" icon-name="custom:custom14">
+ 
+    <lightning-card title="Thirdparty Css" icon-name="custom:custom14">
+        <div  class="slds-var-m-around_small">
+            <p class="slds-text-heading_medium animate__bounceIn">{displayDate}</p>
+           </div>  
+        </lightning-card>
+    <lightning-card title="ThirdParty Animate Css" icon-name="custom:custom14">
         <div  class="slds-var-m-around_small">
             <p class="slds-text-heading_medium animate__bounceIn">{name}</p>
            </div>  
