--- a/force-app/main/default/lwc/bestPracticeCalculator/bestPracticeCalculator.html
+++ b/force-app/main/default/lwc/bestPracticeCalculator/bestPracticeCalculator.html
@@ -1,3 +1,5 @@
+
+<!-- Git Test -->
 <template>
     <lightning-card title="Calculator" icon-name="custome:custom15">
         <div class="slds-var-p-around_small">
